log
Thu 21 Mar 2024 01:08:41 AM UTC: 
 exercises.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:15: error: ‘lista’ undeclared (first use in this function)
   46 |     pushFront(lista, &i);
      |               ^~~~~
exercises.c:46:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bd83ce6
Thu 21 Mar 2024 01:10:19 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:15: error: ‘lista’ undeclared (first use in this function)
   46 |     pushFront(lista, &i);
      |               ^~~~~
exercises.c:46:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a58240b
Thu 21 Mar 2024 01:11:14 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
64bacda
Thu 21 Mar 2024 01:15:24 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 10/70
7286553
Thu 21 Mar 2024 01:15:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bfe31d9
Thu 21 Mar 2024 01:25:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
52c70c7
Thu 21 Mar 2024 01:31:13 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:27: error: dereferencing ‘void *’ pointer [-Werror]
   79 |     if(valor == elem) pop(*elemento);
      |                           ^~~~~~~~~
exercises.c:79:27: error: invalid use of void expression
cc1: all warnings being treated as errors
Compilation failed
7d49602
Thu 21 Mar 2024 01:31:20 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
25000f2
Thu 21 Mar 2024 01:35:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a448ca6
Thu 21 Mar 2024 01:37:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
f164b35
Thu 21 Mar 2024 01:40:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
3bc2891
Thu 21 Mar 2024 02:02:16 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:17: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |     pushBack(L, 1);
      |                 ^
      |                 |
      |                 int
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
ddc15ad
Thu 21 Mar 2024 02:02:52 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|3
total_score: 30/70
eff4926
Thu 21 Mar 2024 02:28:10 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:95:10: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
   95 |   while(!is_empty(P1)){
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
69fffae
Thu 21 Mar 2024 02:31:01 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
13180de
Thu 21 Mar 2024 02:31:30 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
eb77844
